--- a/package.json
+++ b/package.json
@@ -10,5 +10,10 @@
   "license": "ISC",
   "devDependencies": {
     "electron-prebuilt": "^0.37.8"
+  },
+  "dependencies": {
+    "gm": "^1.22.0",
+    "lodash": "^4.11.2",
+    "mkdirp": "^0.5.1"
   }
 }
