--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "electron-prebuilt": "^0.37.8"
   },
   "dependencies": {
+    "async": "^1.5.2",
     "gm": "^1.22.0",
     "lodash": "^4.11.2",
     "mkdirp": "^0.5.1"
